strategies/scrap-notes.txt

self._count_matrix.get(card.numeric_value)


self._count
<count.Count object at 0x000002BE789C9600>
self._count._cards_dealt
[<card.Card object at 0x000002BE789C3520>, <card.Card object at 0x000002BE789C35E0>, <card.Card object at 0x000002BE789C3D00>, <card.Card object at 0x000002BE789C1600>, <card.Card object at 0x000002BE789C3EE0>, <card.Card object at 0x000002BE789C2740>, <card.Card object at 0x000002BE789C2860>, <card.Card object at 0x000002BE789C2A40>, <card.Card object at 0x000002BE789C9300>, <card.Card object at 0x000002BE789C3760>, <card.Card object at 0x000002BE789C2B00>, <card.Card object at 0x000002BE789C3CA0>, <card.Card object at 0x000002BE789C15A0>, <card.Card object at 0x000002BE789C2B90>, <card.Card object at 0x000002BE789C2B60>, <card.Card object at 0x000002BE789C3940>, <card.Card object at 0x000002BE789C08B0>, <card.Card object at 0x000002BE789C13F0>, <card.Card object at 0x000002BE789C3580>, <card.Card object at 0x000002BE789C9720>, <card.Card object at 0x000002BE789C2980>, <card.Card object at 0x000002BE789C2BF0>, <card.Card object at 0x000002BE789C3FA0>, <card.Card object at 0x000002BE789C11E0>, <card.Card object at 0x000002BE789C0730>, <card.Card object at 0x000002BE789C3F40>, <card.Card object at 0x000002BE789C36A0>, <card.Card object at 0x000002BE789C2CB0>, <card.Card object at 0x000002BE789C38E0>, <card.Card object at 0x000002BE789C37C0>, <card.Card object at 0x000002BE789C9750>, <card.Card object at 0x000002BE789C9480>, <card.Card object at 0x000002BE789C1630>, <card.Card object at 0x000002BE789C0FA0>, <card.Card object at 0x000002BE789C97B0>]
for car in self._count._cards_dealt:
Traceback (most recent call last):
  File "c:\Users\16179\.vscode\extensions\ms-python.debugpy-2024.12.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_comm.py", line 1244, in internal_evaluate_expression_json
    pydevd_vars.evaluate_expression(py_db, frame, expression, is_exec=True)
  File "c:\Users\16179\.vscode\extensions\ms-python.debugpy-2024.12.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_vars.py", line 368, in new_func
    return _run_with_unblock_threads(original_func, py_db, curr_thread, frame, expression, is_exec)
  File "c:\Users\16179\.vscode\extensions\ms-python.debugpy-2024.12.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_vars.py", line 333, in _run_with_unblock_threads
    return _run_with_interrupt_thread(original_func, py_db, curr_thread, frame, expression, is_exec)
  File "c:\Users\16179\.vscode\extensions\ms-python.debugpy-2024.12.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_vars.py", line 304, in _run_with_interrupt_thread
    return original_func(py_db, frame, expression, is_exec)
  File "c:\Users\16179\.vscode\extensions\ms-python.debugpy-2024.12.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_vars.py", line 547, in evaluate_expression
    compiled = _compile_as_exec(expression)
  File "c:\Users\16179\.vscode\extensions\ms-python.debugpy-2024.12.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_vars.py", line 411, in _compile_as_exec
    return compile(expression_to_evaluate, "<string>", "exec", _ASYNC_COMPILE_FLAGS)
  File "<string>", line 1
    for car in self._count._cards_dealt:
                                        ^
IndentationError: expected an indented block after 'for' statement on line 1
for car in self._count._cards_dealt:
    print(car.numeric_value)


10
10
10
5
8
11
2
5
6
7
7
11
8
10
6
2
10
9
10
11
3
8
6
7
3
7
9
10
3
6
2
5
4
10
3


{
    
    5: 3,  -3 
    3: 4, -4
    4: 1 -1 
    2: 3, -3
    6: 4, -4
    7: 4, 0
    8: 3, 0
    9: 2, 0 
    10: 8, 8
    11: 3, 3
    }


-15
+11 







